--- a/Assignment/Areas/Home/Pages/Class_Detail.cshtml
+++ b/Assignment/Areas/Home/Pages/Class_Detail.cshtml
@@ -160,12 +160,7 @@
                             <div class="cd-single-item">
                                 <h3>Describe</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua accusantium doloremque
-                                    laudantium. Excepteur sint occaecat cupidatat non proident sculpa.
+                                    @Model.Room.Description
                                 </p>
                             </div>
                             <div class="cd-single-item">
