--- a/Assignment/Areas/Home/Pages/Class_Timetable.cshtml
+++ b/Assignment/Areas/Home/Pages/Class_Timetable.cshtml
@@ -273,7 +273,7 @@
                                     @foreach (var room in Model.listRoom)
                                     {
                                         <td class="clickable-room">
-                                            <form method="post" action="/Class-timetable">
+                                            <form method="post" action="/Class-details">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="roomId" value="@room.RoomId" />
                                                 <button type="submit" class="room-button">@room.RoomName</button>
@@ -286,7 +286,7 @@
                                     @foreach (var room in Model.listRoom)
                                     {
                                         <td class="clickable-room">
-                                            <form method="post" action="/Class-timetable">
+                                            <form method="post" action="/Class-details">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="roomId" value="@room.RoomId" />
                                                 <button type="submit" class="room-button">@room.RoomName</button>
@@ -299,7 +299,7 @@
                                     @foreach (var room in Model.listRoom)
                                     {
                                         <td class="clickable-room">
-                                            <form method="post" action="/Class-timetable">
+                                            <form method="post" action="/Class-details">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="roomId" value="@room.RoomId" />
                                                 <button type="submit" class="room-button">@room.RoomName</button>
@@ -312,7 +312,7 @@
                                     @foreach (var room in Model.listRoom)
                                     {
                                         <td class="clickable-room">
-                                            <form method="post" action="/Class-timetable">
+                                            <form method="post" action="/Class-details">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="roomId" value="@room.RoomId" />
                                                 <button type="submit" class="room-button">@room.RoomName</button>
@@ -325,7 +325,7 @@
                                     @foreach (var room in Model.listRoom)
                                     {
                                         <td class="clickable-room">
-                                            <form method="post" action="/Class-timetable">
+                                            <form method="post" action="/Class-details">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="roomId" value="@room.RoomId" />
                                                 <button type="submit" class="room-button">@room.RoomName</button>
