--- a/Assignment/Areas/Home/Pages/Home.cshtml
+++ b/Assignment/Areas/Home/Pages/Home.cshtml
@@ -2,7 +2,8 @@
 @model Assignment.Areas.Home.Pages.HomeModel
 @using System.Text.Json
  @using System.Text.Json.Serialization;
- @using Assignment.Model
+ @using Assignment.Models
+@using Assignment.Models
 
 @{
 }
